--- a/1Intro/1_Intro.html
+++ b/1Intro/1_Intro.html
@@ -11,5 +11,45 @@
     але у HTML додаються спеціальні елементи, які, з одного боку є текстом,
     але, з іншого боку, не відображаються (безпосередньо), а
     впливають на характер відображення. Обробляє HTML браузер.
+
+    Текст відображаються браузерлм із змінами: з нього вилучаються 
+    усі "пробільні" символи - пробіл, табуляція, переведення рядку,
+    тощо, і заміняються на один пробел.
+
+    Для форматування текста вживаються теги та сутності
+    (tags and entities). Сутності - комбінація для відображення
+    символів, що не належать до ASCII таблиці. Сутность починається 
+    з символу '&' та закінчуються ';'. Між цими символами вставляється 
+    назва або код сутності.
+    &copy; - символ "copyright"
+    &amp; - символ амперсанту
+    &nbsp; - невидимий символ "non breakable space" - залишає пробіл
+    між елементами, але не дозволяє "розірвати" його при переносі
+    на новий рядок. (необхідний з одиницямі вимірування 1&nbsp;см; 
+    ініціалів Призвище&nbsp;І.&nbsp;Б.)
+    &#37; - символ '%' по його ACSII коду
+    &amp;#37; - символ '%' по його ACSII коду
+
+    теги - засоби HTML, починаються із символа '<' після якого 
+    без пробілів іде назва тега. Для позначення тегів у тексті, символи
+    '<' мають замінюватися на сутність &lt; (&amp;lt;)
+
+    Теги поділяються на парні та самозакриті. Парний тег має початковий тег
+    &lt;назва> та кінцевий тег &lt;/назва>, те що між ними разміщено назвається тілом 
+    або контентом тегу. 
+
+    самозакриті теги не мають тіла і в них присутній лише початковий тег.
+    Не вимагається, але рекомендується зазначати у кінці таких тегів '/' яе ознаку
+    самозакриття. &lt;br> або &lt;br/> - це одне і те ж само, робота однакова,
+    але різний синтаксис. 
+
+    Імена тегів реєстро-нечутливі, можна писати довільним розміром.
+
+    Атрибути тегів - те, що слідує після імені тегу до символу '>'.
+    &lt;meta charset="UTF-8">: meta - ім'я тегу, charset - Атрибут
+    (ім'я атрибута), 'UTF-8' - значення атрибуту.
+
+    
+
 </body>
 </html>
