--- a/2 Styles/index.html
+++ b/2 Styles/index.html
@@ -3,17 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Підключення зовшнішнього стилю  - <link/>-->
+    <link rel="stylesheet" href="./style.css"/>
     <title>Styles</title>
+    <!-- Внутрішні стилі - діють в межах документа-->
+    <style>
+        p {/* селектор по типу -- всі елементи з тегом <p>*/
+            color: darkslategray;
+        }
+        body {/* теж по тегу -- для всього тілу*/
+            background-color: gainsboro;
+        }
+        .red {/* стильовий клас - для елементів з атрібутом class = "red"*/
+            color: maroon;
+        }
+        #header1 { /* елемент з id="header1" (має бути один елемент з одним id)*/
+            text-decoration: underline; /* аналог <i>*/
+        }
+        footer hr {/*  пробіл -- підлеглість: для всіх <hr> в середині <footer>*/
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>
+        <!-- декілька стильових класів зазначаються через пробіл-->
+        <h1 class="red center" id="header1">
            Робота зі стилями 
         </h1>
     </header>
     <main>
-        <h2>Ідея</h2>
-        <p>
+        <h2 class="blue">Ідея</h2>
+        <p class="red">
             Створення великої кількості тегів форматування ускладнює 
             вивчення HTML і, у той же час, не задовольняє усіх потреб,
             змушуючі з'являтись новим тегам.
@@ -25,6 +46,44 @@
             що дозволяє вживати мінімальну кількість різних тегів у документі,
             а зосередитись на їх стилізації.
         </p>
+        <h2 class="blue">CSS</h2>
+        <p>
+            CSS - Cascade Stylesheet - каскадні таблиці стилів
+            Розвиток ідеї стилів утворив мову CSS яка полягає у каскадному
+            (один-за-одним) додаванням стильових визначень групам елементів.
+            Мова складається з селекторів - виразів для зазначення груп,
+            та стильових атрибутів.
+        </p>
+        <p>
+            Стилі бувають: 
+        </p>
+        <ul><!-- unordered list - ненумерований перелік-->
+            <li><!-- list item - пункт переліку-->
+                inline-стилі - стилі, зазначені усередині тегу як
+                один з атрибутів. У таких стилях немає селекторів,
+                вони діють тільки на даний елемент (тег).
+                &lt;span style="color: green;">
+                <span style="color: lime;">Це зелений цвет</span>
+                &lt;/span>
+            </li>
+            <li>
+                внутрішні стилі -- визначені у файлі HTML у head-частині
+                Складаються інструкціми
+                <code>selector {artibute1: value1; atribute2: value2}</code> 
+                selector - це вираз, що визначає групу елементів.
+                Значення атрибутів встрановлються для всіх елементів групи.
+                Для назв стильових класів, ідентіфікаторів, тощо
+                дозволяється символ "-", імена складені з цим символом,
+                на кшталт <code> this-is-a-sample</code>  "kebab-style"
+            </li>
+            <li>
+                зовнышні стилі -- визначені в окремому файлі або ресурсі
+                Детальніше про мову селекторів можна почитати на сайтах 
+                типу 
+                <a href="https://www.w3schools.com">w3schools
+                </a>
+            </li>
+        </ul>
     </main>
     <footer>
         <hr/>
