--- a/5Forms/forms.html
+++ b/5Forms/forms.html
@@ -32,7 +32,9 @@
             Стать: 
             <label> <input type="radio" name="sex" value="M"/>Чол</label>
             <label> <input type="radio" name="sex" value="F"/>Жін</label>
-            <label> <input type="radio" name="sex" value="N"/>Відмова</label><br><br>
+            <label> <input type="radio" name="sex" value="N"/>Відмова</label>
+			<label> <input type="radio" name="shok" value="S"/>Шок</label>
+			<br><br>
             <label>
                 <input type="checkbox">            
                 Отримувати пропозиціі по пошті
