--- a/4Pseudo/Pseudo.html
+++ b/4Pseudo/Pseudo.html
@@ -59,5 +59,6 @@
     <div class="battery bat-high" ></div>
     <div class="battery bat-med" ></div>
     <div class="battery bat-low"></div>
+    <div class="battery"></div>
 </body>
 </html>
