--- a/5Forms/forms.html
+++ b/5Forms/forms.html
@@ -53,6 +53,13 @@
             Коментар: <textarea name="comment" cols="30" rows="3"></textarea>
             <br><br>
 
+            Стать: 
+            <input type="radio" name="decor" id="rb1" class="rb-decor" value="M"/><Label for="rb1">Чол</label>
+            <input type="radio" name="decor" id="rb2" class="rb-decor" value="F"/><label for="rb2">Жін</label>
+            <input type="radio" name="decor" id="rb3" class="rb-decor" value="N"/><label for="rb3">Відмова</label>
+			<input type="radio" name="decor" id="rb4" class="rb-decor" value="S"/><lavel for="rb4">Шок</label>
+			<br><br>
+
             <input type="submit" value="Реєстрація">
 
         </div>
